Bug 202694 - [CSS Shadow Parts] Fix style invalidation with class selector and ::before and ::after
Summary: [CSS Shadow Parts] Fix style invalidation with class selector and ::before an...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks: 149443
  Show dependency treegraph
 
Reported: 2019-10-08 06:47 PDT by Antti Koivisto
Modified: 2019-10-08 14:41 PDT (History)
3 users (show)

See Also:


Attachments
patch (6.59 KB, patch)
2019-10-08 06:56 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (9.24 KB, patch)
2019-10-08 07:47 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (9.24 KB, patch)
2019-10-08 08:37 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (7.44 KB, patch)
2019-10-08 09:33 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Koivisto 2019-10-08 06:47:55 PDT
Add a test and a fix.
Comment 1 Antti Koivisto 2019-10-08 06:56:50 PDT
Created attachment 380425 [details]
patch
Comment 2 Antti Koivisto 2019-10-08 07:47:37 PDT
Created attachment 380428 [details]
patch
Comment 3 Antti Koivisto 2019-10-08 08:37:46 PDT
Created attachment 380431 [details]
patch
Comment 4 Antti Koivisto 2019-10-08 09:33:12 PDT
Created attachment 380436 [details]
patch
Comment 5 WebKit Commit Bot 2019-10-08 14:40:32 PDT
Comment on attachment 380436 [details]
patch

Clearing flags on attachment: 380436

Committed r250861: <https://trac.webkit.org/changeset/250861>
Comment 6 WebKit Commit Bot 2019-10-08 14:40:34 PDT
All reviewed patches have been landed.  Closing bug.
Comment 7 Radar WebKit Bug Importer 2019-10-08 14:41:20 PDT
<rdar://problem/56089548>