[CSS Shadow Parts] Fix style invalidation with class selector and ::before and ::after https://bugs.webkit.org/show_bug.cgi?id=202694

Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: fast/css/shadow-parts/invalidation-class-before-after.html

* style/StyleInvalidator.cpp:
(WebCore::Style::Invalidator::invalidateIfNeeded):
(WebCore::Style::Invalidator::invalidateStyleWithMatchElement):

Invalidate in the shadow tree if the computed match element is host.

(WebCore::Style::Invalidator::invalidateInShadowTreeIfNeeded):

Factor into a function.

* style/StyleInvalidator.h:

LayoutTests:

* fast/css/shadow-parts/invalidation-class-before-after-expected.txt: Added.
* fast/css/shadow-parts/invalidation-class-before-after.html: Added.


Canonical link: https://commits.webkit.org/216174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250861 268f45cc-cd09-0410-ab3c-d52691b4dbfc